css/arkusz.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
   reset
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*below my code*/

html {
 	font-size: 16px;
 	font-family: Verdana, Geneva, sans-serif;
 	overflow: hidden;
 	height: 100%;
}

body {
 	color: #191919;	
 	overflow: auto;
 	height: 100%;
}

.fix-Android {
	overflow: hidden;
}

.clearfix {
	content: '';
	display: block;
	clear: both;
}

header p {
	text-indent: 0;
}

p {
	line-height: 1.4;
	text-align: justify;
}

.column-adjusted {
	padding: 0;
	margin: 0;
}

.icon_home > .fa {
	font-size: 1.2rem;
}

.link_home {
	display: none;
}

.nav,
.navbar-brand {
	text-transform: uppercase;
	font-size: 0.8rem;
}

.navbar-brand {
	font-size: 0.9rem
}

.nav > li > a {
	height: 3.125rem;
}

.nav > li > a:hover,
.nav > li > a:focus {
	background: #191919;
	outline: 2px solid #fff;
	outline-offset: -2px;
}

.navbar {
	background-color: #191919;
	margin-bottom: 0;
	z-index: 10;
}

.navbar a {
	color: #f7f7f7;
}

.navbar-right {
	margin-right: 1.25rem;
}

.navbar-header {
	margin-left: 1.25rem;
}

.navbar-toggle {
	background-color: #DCDCDC;
	margin-right: 1.25rem;
}

.icon-bar {
	background-color: #000;
}

.intro {
	height: 48.75rem;
	background: url(../img/simon-rae-422576-unsplash.jpg);
	background: url(../img/alessia-caudiero-1867-unsplash.jpg);
	background: url(../img/london-2393098_1920.jpg);
	background-size: cover;
	background-attachment: fixed;
	position: relative;
}

.intro__buttons__container {
	padding: 14rem 5rem 1rem 2rem;
	width: 30%;
	float: left;
}

.intro__button {
	background: rgba(0,0,0,0.5);
	outline: none;
	border: 1px solid #fff;
	display: inline-block;
	height: 3.75rem;
	width: 15.625rem;
	text-transform: uppercase;
	letter-spacing: 2px;
	color: #fff;
	margin: 0.8rem;
	line-height: 3.5;
	text-align: center;
	transition: 0.4s;
	float: right;
}

.intro__button:nth-of-type(2) {
	clear: both;
}

.intro__button:hover {
	background: rgba(0,0,0,0.7);
}

.intro__button:hover,
.intro__button:focus,
.intro__button:active {
	text-decoration: none;
	color: #fff;
}

.intro__header {
	font-family: 'Merriweather', serif;
	font-weight: bold;
	color: #191919;
	width: 70%;
	padding: 7rem 2rem 8rem;
	text-align: left;
	float: left;
}

.title_main {
	font-size: 5em
}

.intro__header__subtitle {
	margin-top: 2rem;
	font-size: 3em;
	text-align: left;
	text-indent: 0;
}

#origins,
#overview,
#articles,
.article__content,
.panel-group {
	width: 62.5rem;
	margin: 4rem auto;
	max-width: 80%;
}

#overview,
#gallery {
	margin-top: 3rem;
}

#contact {
	margin: 4rem auto;
}

.origins__heading,
.overview__heading,
.gallery__heading,
.articles__heading,
.contact__heading {
	font-size: 2rem;
	font-family: 'Merriweather', serif;
	font-weight: bold;
	padding: 2rem 1rem 3rem;
	text-align: center;
}

.gallery__heading {
	padding-bottom: 3.75rem;
}

.contact__heading {
	padding-bottom: 4.5rem;
}

.link_overview,
.list__hostels__link {
	color: #23527c;
	font-weight: bold;
	font-size: 1rem;
	text-align: center;
	padding: 0.4rem;
}

.link_overview:hover {
	background: rgba(65,66,84,0.1);
}

#gallery {
	padding: 0 1rem;
	width: 75rem;
	max-width: 90%;
	margin: 0 auto;
}

.gallery__item {
	width: 50%;
	float: left;
	height: 380px;
	box-shadow: 1px 1px 10px 0 rgba(0,0,0,0.05);
	position: relative;
	transition: all 1s ease;
}

.gallery__item__tile {
	width: 100%;
	height: 100%;
	display: block;	
	background-size: cover;
	background-position: center;
	transition: 0.7s;
}

.gallery__item:hover  .gallery__item__tile{
	transform: scale(0.99);
}

.gallery__item a {
	position: relative;
	bottom: 0;
	left: 0;
}

.gallery__item__overlay {
	position: absolute;
	top: 0;
	left: 0;
	max-width: 100%;
	max-height: 100%;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0);
	z-index: 1;
	transition: 0.7s;
	pointer-events: none;
}

.gallery__item:hover .gallery__item__overlay {
	background: rgba(0,0,0,0.1);
}

.gallery__item__title-container {
	background: rgba(0,0,0,0.1);
	display: block;
	height: 3.75rem;
	width: 15.625rem;
	letter-spacing: 2px;
	/*font-size: 1.5rem;*/
	text-transform: uppercase;
	letter-spacing: 2px;
	color: #fff;
	margin: 0 auto;
	text-align: center;
	transition: 0.7s;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	border: 1px solid #fff;
}

.gallery__item__title {
	display: inline-block;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

.gallery__item:hover .gallery__item__title-container {
	background: rgba(0,0,0,0.5);
}

a#sadburyhill{
	background-image: url(../img/leyton_12.jpg);
}

a#leyton {
  	background-image: url(../img/leytongardens_7.jpg);
}

a#thames {
  	background-image: url(../img/towerbridge.jpg);
}

a#various {
  	background-image: url(../img/seashell.jpg);
}

.articles__item {
	display: block;
	width: 46%;
	margin: 0.5rem;
	float: left;
	font-size: 1.5rem;
	text-align: center;
	line-height: 1.2;
	position: relative;
}

.articles__item:nth-of-type(2n) {
	float:right;
}
/* ... */

